@@ -18,7 +18,8 @@
 -->
 <project name="IvyRelease" default="snapshot" 
 		xmlns:ivy="antlib:org.apache.ivy.ant"
-		xmlns:xooki="antlib:xooki">
+		xmlns:xooki="antlib:xooki"
+		xmlns:openpgp="antlib:org.apache.commons.openpgp.ant">
 	<import file="build.xml"/>
 	
 	<taskdef uri="antlib:xooki" file="${doc.src.dir}/xooki/antlib.xml" />
@@ -201,8 +202,67 @@
 	</target>
 	
 	<target name="release-version">
-		<input message="please enter version: " addproperty="build.version"/>
-		<input message="please enter status: (integration,milestone,release)" addproperty="status"/>
+		<property name="build.version" value="${target.ivy.version}" />
+		<echo>Setting version to ${build.version}</echo>
+		<condition property="status" value="release">
+			<matches pattern="^\d+\.\d+\.\d+$" string="${build.version}"/>
+		</condition>
+		<condition property="status" value="milestone">
+			<matches pattern="^\d+\.\d+\.\d+-(alpha|beta|rc)\d+$" string="${build.version}"/>
+		</condition>
+		<property name="status" value="integration" />
+		<echo>Setting status to ${status}</echo>
+	</target>
+	
+	<target name="sign" depends="init-ivy">
+		<ivy:settings id="sign.settingsId" file="ivysettings-signtask.xml" />
+		<ivy:cachepath organisation="org.apache.commons" settingsRef="sign.settingsId" transitive="false"
+				module="commons-openpgp" revision="1.0-SNAPSHOT" inline="true" pathid="openpgp.classpath"/>
+		<ivy:cachepath organisation="bouncycastle" settingsRef="sign.settingsId"
+				module="bcprov-jdk16" revision="140" inline="true" pathid="bouncycastle.bcprov.classpath"/>
+		
+		<!-- Didn't find the jdk1.6 bcpg dependency, using the jdk1.5 version instead -->
+		<ivy:cachepath organisation="bouncycastle" settingsRef="sign.settingsId" transitive="false"
+				module="bcpg-jdk15" revision="140" inline="true" pathid="bouncycastle.bcpg.classpath"/>
+		
+		<property file="${user.home}/ivybuild.properties" />
+		<input message="please enter your PGP password: " addproperty="pgp.password"/>
+		<input message="please enter your PGP keyId: " addproperty="pgp.keyId"/>
+		
+		<!--
+			For some reason, if we use the openpgp:signer task here directly, the bouncycastle security
+			provider cannot be loaded. If we launch it as a forked process everything works fine !?!
+		-->
+		<java classname="org.apache.tools.ant.launch.Launcher"
+				fork="true">
+			<classpath>
+				<fileset dir="${ant.home}" includes="**/*.jar" />
+				<path refid="bouncycastle.bcprov.classpath" />
+				<path refid="bouncycastle.bcpg.classpath" />
+				<path refid="openpgp.classpath" />
+			</classpath>
+			<arg line="-f build-release.xml" />
+			<arg line="sign-internal" />
+			<arg line="-Dpgp.password=${pgp.password}" />
+			<arg line="-Dpgp.keyId=${pgp.keyId}" />
+		</java>
+	</target>
+		
+	<target name="sign-internal">
+		<property file="build.properties" />
+		<taskdef resource="org/apache/commons/openpgp/ant/antlib.xml" uri="antlib:org.apache.commons.openpgp.ant" />
+		<openpgp:signer secring="${user.home}/.gnupg/secring.gpg"
+						pubring="${user.home}/.gnupg/pubring.gpg"
+						password="${pgp.password}" 
+						keyid="${pgp.keyId}"
+						asciiarmor="true">
+			<fileset dir="${distrib.dir}">
+				<include name="**/*.pom"/>
+				<include name="**/*.jar"/>
+				<include name="**/*.zip"/>
+				<include name="**/*.gz"/>
+			</fileset>
+		</openpgp:signer>
 	</target>
 	
 	<target name="prepare-snapshot" 
