@@ -45,7 +45,7 @@ ivy.minimum.javaversion=1.4
 debug.mode=on
 ivy.install.version=1.4.1
 
-status=integration
+#status=integration
 
 test.class.pattern = *Test
 
