@@ -710,6 +710,18 @@ name|getParentVersion
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|domReader
+operator|.
+name|setProperty
+argument_list|(
+literal|"project.parent.version"
+argument_list|,
+name|domReader
+operator|.
+name|getParentVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|Map
 name|pomProperties
 init|=
